Pull request #122: WDZO-1480: fix styles for export passwords button after reset users passwords
Squashed commit of the following:

commit 4a2695a927e805dc368e4b91aaea626c9d9dbc69
Author: OUT-Luchko-DD <DDLuchko@sberbank.ru>
Date:   Fri Jan 29 12:11:11 2021 +0300

    WDZO-1480: fix styles for export passwords button after reset users passwords

--- a/src/containers/UsersPage/UserPage/UsersList/RestoredTableUser/RestoredTableUser.module.css
+++ b/src/containers/UsersPage/UserPage/UsersList/RestoredTableUser/RestoredTableUser.module.css
@@ -2,32 +2,11 @@
     font-weight: 700;
 }
 
-.table {
-    width: 100%;
-    min-width: 360px;
-}
-
 .usersList {
     margin-bottom: 10px;
     max-width: 350px;
 }
 
-
-.passwordColumn{
-    text-align: right;
-}
-
-.error{
-    color:red;
-}
-
 .buttonWrapper {
     text-align: center;
-}
-
-.button:global(.ant-btn){
-    background: #09a552;
-    border-color:#09a552;
-    font-family: 'SBSansText';
-    color: white;
 }
